--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   
+
 
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="lib/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -16,44 +17,55 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Agency</a>
-                  </div>
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
-                  </ul>
-                </div>
-              </nav>
-                 
-<h1>Bookinng</h1>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Agency</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="pg2">Page 2</a>
+                </li>
+                <li>
+                    <a href="#">Page 3</a>
+                </li>
+                <li>
+                    <a href="#">Page 4</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
 
     <form action="#">
-        <div>
-            <label for="artis">Artis:</label>
-            <input id="artis" name="book-artis" type="text">
-        </div>
-        <div>
-            <label for="lable">Lable:</label>
-            <input id="lable" name="lable-name" type="text">
-        </div>
-        <button type="button" id="addButton">Add</button>
+        <div class="container">
+            <h1>Bookinng</h1>
+
+            <div>
+                <label for="artis">Artis:</label>
+                <input id="artis" name="book-artis" type="text">
+            </div>
+            <div>
+                <label for="lable">Lable:</label>
+                <input id="lable" name="lable-name" type="text">
+            </div>
+            <button type="button" id="addButton" class="btn btn-info">Info</button>
+
     </form>
 
     <div id="display-list">
 
-</div>
+    </div>
 
 
-<footer class="container">
+    <footer class="container">
         &copy;2017-2018 Shawnville, LLC
     </footer>
 
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
     crossorigin="anonymous"></script>
@@ -62,6 +74,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<script src="jss/book.js"></script>
+    <script src="jss/book.js"></script>
 </body>
+
 </html>
