--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Agency</a>
+              <a class="navbar-brand" href="#">
+                <img alt="Brand" src="pic/sign.png">
+              </a>
+            </div>
+
             </div>
             <ul class="nav navbar-nav">
                 <li class="active">
