--- a/pg2.html
+++ b/pg2.html
@@ -1,7 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                    <img src="pic/404.png" class="img-fluid" alt="404">    
-                </a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>HOME</title>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+  
+    <!-- <link rel="stylesheet" href="style/style.css"> -->
+    <!-- <link rel="stylesheet" href="lib/font-awesome-4.7.0/css/font-awesome.min.css"> -->
+
+</head>
+
+<body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img src="pic/404.png" class="img-fluid" alt="404">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <footer class="container">
+    &copy;2017-2018 Shawnville, LLC
+</footer>
+
+
+</body>
+
+</html>
