--- a/pg3.html
+++ b/pg3.html
@@ -28,10 +28,10 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="pg2">Page 2</a>
+                <a href="pg2.html">Page 2</a>
             </li>
             <li>
-                <a href="#">Page 3</a>
+                <a href="pg3.html">Page 3</a>
             </li>
             <li>
                 <a href="#">Page 4</a>
